moved the custom activity

--- a/ElsaServer/ElsaServer.csproj
+++ b/ElsaServer/ElsaServer.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ElsaStudio\ElsaStudio.csproj" />
+    <ProjectReference Include="..\neobluetech.ElsaOpenApiClient\neobluetech.ElsaOpenApiClient.csproj" />
   </ItemGroup>
 
   <ItemGroup>
