--- a/ElsaServer/appsettings.json
+++ b/ElsaServer/appsettings.json
@@ -9,5 +9,9 @@
   "Http": {
     "BaseUrl": "https://localhost:5001",
     "BasePath": "/api/workflows"
+  },
+  "OpenApiSettings": {
+    "SpecificationsPath": "OpenApiSpecs",
+    "RefreshIntervalMinutes": 30
   }
 }
